fix: fixed horizontal scroll

--- a/project/src/components/best-seiling/best-selling.css
+++ b/project/src/components/best-seiling/best-selling.css
@@ -8,7 +8,7 @@
   position: absolute;
   content: "";
   top: -169px;
-  right: -201px;
+  right: -190px;
   width: 285px;
   height: 313px;
   background: url("../../../public/img/best-selling-bg.png") no-repeat;
